# resona

./: .gitignore  CLAUDE.md  FEATURE.md  PLAN.md  README.md  SPECS.MD  pyproject.toml
branding/: BRAND.md  MARKETING.md
src/nao/: __init__.py  config.py  runtime.py  state.py
src/nao/agents/: __init__.py
src/nao/agents/gatekeeper/: __init__.py  frontal.py  fsm.py  policy.py
src/nao/agents/skeptic/: __init__.py  detector.py  fsm.py  policy.py
src/nao/api/: server.py
src/nao/dash/: _shared.py  app.py  app_config.py  calibration_worker.py  run.py  voice.py
src/nao/dash/views/: calibrate.py  live.py  setup.py
src/nao/ingest/: __init__.py  muse.py  stream.py  synthetic.py
src/nao/llm/: __init__.py  client.py  prose.py  skills.py
src/nao/mcp/: server.py
src/nao/process/: __init__.py  affect.py  artifacts.py  bands.py  buffer.py  focus.py  frame.py  hrv.py  pipeline.py  verdict.py
src/nao/scripts/: calibrate.py  muse_runner.py  pair_muse.py  record_baseline.py  verify_live.py
src/nao/sessions/: __init__.py  insights.py  models.py  recorder.py  store.py
swift/NaoBrain/: Info.plist  Package.swift  build_app.sh
swift/NaoBrain/Sources/NaoBrain/: NaoBrainApp.swift
swift/NaoBrain/Sources/NaoBrain/Models/: AppraisalState.swift  CalibrationProgress.swift  FocusFrame.swift  GatekeeperStatus.swift  MuseDevice.swift  (+3 more)
tests/: test_affect.py  test_api.py  test_artifacts.py  test_bands.py  test_calibration_worker.py  test_focus.py  test_gatekeeper.py  test_hrv.py  test_insights.py  test_pipeline.py  test_sessions.py  test_skeptic.py  test_state.py  test_voice.py
(+20 files in other folders)
